# golang_hello

./: BUILD.bazel  MODULE.bazel  go.mod  golang_hello.go
lib/: BUILD.bazel
src/: BUILD.bazel  golang_hello.go
src/lib/: BUILD.bazel  hello_lib.go
